--- a/module1-Solution/index.html
+++ b/module1-Solution/index.html
@@ -4,6 +4,7 @@
     <title>Lunch Checker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/style.css">
     <script type="text/javascript" src="angular.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <style>
@@ -22,7 +23,7 @@
          <div class="form-group">
              <button class="btn btn-default" ng-click="CheckDishes();">Check If Too Much</button>
          </div>
-         <div class="form-group message" style="color:{{color}}; border: {{bSize}} solid {{color}};">
+         <div class="form-group message" id={{idVal}}>
            {{message}}
 
          </div>
