ng-if used to hide

--- a/module1-Solution/index.html
+++ b/module1-Solution/index.html
@@ -23,7 +23,7 @@
          <div class="form-group">
              <button class="btn btn-default" ng-click="CheckDishes();">Check If Too Much</button>
          </div>
-         <div class="form-group message" id={{idVal}}>
+         <div class="form-group message" id={{idVal}} ng-if="msg">
            {{message}}
 
          </div>
